--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -1,10 +1,10 @@
 /* Estilo para o contêiner do título */
 .title-container {
-    position: absolute; /* Para posicionar sobre o fundo */
-    top: 20px; /* Ajuste para posicionar no topo */
+    position: absolute;
+    top: 20px;
     left: 50%;
-    transform: translateX(-50%); /* Centraliza horizontalmente */
-    z-index: 20; /* Certifica que o título fique sobre outros elementos */
+    transform: translateX(-50%);
+    z-index: 20;
     text-align: center;
 }
 
@@ -12,7 +12,7 @@
 .title-image {
     max-width: 100%;
     height: auto;
-    width: 300px; /* Ajuste conforme o tamanho da imagem desejada */
+    width: 300px;
 }
 
 /* Estilo do bonequinho */
@@ -20,7 +20,7 @@
     position: absolute;
     width: 50px;
     height: 50px;
-    z-index: 15; /* Certifica que o bonequinho fique acima das linhas, mas abaixo do título */
+    z-index: 15;
     transition: top 0.6s ease, left 0.6s ease;
 }
 
@@ -32,7 +32,7 @@
     background-image: url('../../imagens/fundo.png');
     background-repeat: repeat;
     background-size: 200%;
-    overflow-y: auto; /* Para habilitar o scroll */
+    overflow-y: auto;
 }
 
 /* Contêiner SVG para as linhas pontilhadas */
@@ -42,7 +42,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 5; /* Certifica que as linhas fiquem por trás das fases e do bonequinho */
+    z-index: 5;
+    pointer-events: none; /* Certificar que o SVG não interfira com a interação dos outros elementos */
 }
 
 /* Estilo para as fases */
@@ -60,7 +61,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: transform 0.3s ease;
-    z-index: 10; /* As fases ficam acima das linhas */
+    z-index: 10;
 }
 
 .phase-img {
@@ -86,7 +87,7 @@
     width: 50px;
     height: 50px;
     transform: translate(-50%, -50%);
-    z-index: 11; /* O cadeado fica acima das fases bloqueadas */
+    z-index: 11;
     filter: none !important;
     opacity: 1 !important;
 }
