--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -1,10 +1,10 @@
 /* Estilo para o contêiner do título */
 .title-container {
-    position: absolute;
-    top: 20px;
+    position: absolute; /* Para posicionar sobre o fundo */
+    top: 20px; /* Ajuste para posicionar no topo */
     left: 50%;
-    transform: translateX(-50%);
-    z-index: 20;
+    transform: translateX(-50%); /* Centraliza horizontalmente */
+    z-index: 20; /* Certifica que o título fique sobre outros elementos */
     text-align: center;
 }
 
@@ -12,7 +12,7 @@
 .title-image {
     max-width: 100%;
     height: auto;
-    width: 300px;
+    width: 300px; /* Ajuste conforme o tamanho da imagem desejada */
 }
 
 /* Estilo do bonequinho */
@@ -20,7 +20,6 @@
     position: absolute;
     width: 50px;
     height: 50px;
-    z-index: 15;
     transition: top 0.6s ease, left 0.6s ease;
 }
 
@@ -32,7 +31,7 @@
     background-image: url('../../imagens/fundo.png');
     background-repeat: repeat;
     background-size: 200%;
-    overflow-y: auto;
+    overflow-y: auto; /* Para habilitar o scroll */
 }
 
 /* Contêiner SVG para as linhas pontilhadas */
@@ -42,8 +41,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 5;
-    pointer-events: none; /* Certificar que o SVG não interfira com a interação dos outros elementos */
 }
 
 /* Estilo para as fases */
@@ -61,7 +58,6 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: transform 0.3s ease;
-    z-index: 10;
 }
 
 .phase-img {
@@ -79,7 +75,6 @@
     cursor: not-allowed;
 }
 
-/* Estilo para o ícone de cadeado */
 .lock-icon {
     position: absolute;
     top: 50%;
@@ -87,7 +82,7 @@
     width: 50px;
     height: 50px;
     transform: translate(-50%, -50%);
-    z-index: 11;
+    z-index: 10;
     filter: none !important;
     opacity: 1 !important;
 }
