--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -66,7 +66,7 @@
     border-radius: 50%;
 }
 
-/* Estilo para a fase ativa */
+/* Estilo da fase ativa */
 .phase.active {
     box-shadow: 0 0 15px 5px yellow;
 }
@@ -103,7 +103,32 @@
     }
 }
 
-/* Estilo da fase desbloqueada com brilho */
 .phase.unlocked {
     animation: unlock-glow 1s ease-in-out 3;
+}
+
+/* Animação para as linhas pontilhadas */
+@keyframes line-color-change {
+    0% {
+        stroke: blue;
+    }
+    100% {
+        stroke: purple;
+    }
+}
+
+.path-blue {
+    stroke: blue;
+}
+
+.path-purple {
+    stroke: purple;
+}
+
+/* Estilo da linha pontilhada */
+.path {
+    stroke-dasharray: 15, 10;
+    fill: transparent;
+    stroke-width: 6;
+    transition: stroke 1s ease-in-out;
 }
