--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -132,3 +132,11 @@
     stroke-width: 6;
     transition: stroke 1s ease-in-out;
 }
+
+/* Estilo para o gif de cadeado */
+.unlock-gif {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    z-index: 15;
+}
