--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -32,6 +32,8 @@
     background-repeat: repeat;
     background-size: 200%;
     overflow-y: auto;
+    transform-origin: center center;
+    transition: transform 1s ease; /* Adicionado para suportar o zoom */
 }
 
 /* Contêiner SVG para as linhas pontilhadas */
