--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -18,8 +18,8 @@
 /* Estilo do bonequinho */
 .player {
     position: absolute;
-    width: 50px;
-    height: 50px;
+    width: min(6vw, 6vh);   /* Ajuste dinâmico do bonequinho */
+    height: min(6vw, 6vh);
     transition: top 0.6s ease, left 0.6s ease;
 }
 
@@ -48,9 +48,9 @@
 /* Estilo para as fases */
 .phase {
     position: absolute;
-    width: 8vw;
-    height: 8vw;
-    max-width: 100px;
+    width: min(8vw, 8vh);  /* Ajuste dinâmico das fases */
+    height: min(8vw, 8vh);
+    max-width: 100px;       /* Tamanho máximo */
     max-height: 100px;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 50%;
