retorno das linhas

--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -43,6 +43,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 10;
 }
 
 /* Estilo para as fases */
@@ -119,20 +120,21 @@
     }
 }
 
-.path-blue {
-    stroke: blue;
-}
-
-.path-purple {
-    stroke: purple;
-}
-
 /* Estilo da linha pontilhada */
 .path {
     stroke-dasharray: 15, 10;
     fill: transparent;
     stroke-width: 6;
     transition: stroke 1s ease-in-out;
+}
+
+/* Estilo das linhas */
+.path-blue {
+    stroke: blue;
+}
+
+.path-purple {
+    stroke: purple;
 }
 
 /* Estilo para o gif de cadeado */
