--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -42,8 +42,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    z-index: 10;
+    height: 100%; /* Garantir que cobre toda a área */
+    z-index: 5; /* Ajustado para ficar atrás das fases */
 }
 
 /* Estilo para as fases */
