--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -44,6 +44,7 @@
     width: 100%;
     height: 100%; /* Garantir que cobre toda a área */
     z-index: 5; /* Ajustado para ficar atrás das fases */
+    pointer-events: none; /* Permite que os cliques passem para os elementos abaixo */
 }
 
 /* Estilo para as fases */
