--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -43,7 +43,7 @@
     left: 0;
     width: 100%;
     height: 100%; /* Garantir que cobre toda a área */
-    z-index: 5; /* Ajustado para ficar atrás das fases */
+    z-index: 1; /* Ajustado para ficar atrás das fases */
     pointer-events: none; /* Permite que os cliques passem para os elementos abaixo */
 }
 
@@ -62,6 +62,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: transform 0.3s ease;
+    z-index: 2; /* Certificando que as fases fiquem acima do SVG */
 }
 
 .phase-img {
