--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -42,10 +42,9 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    z-index: 10; /* Garantir que o SVG fique acima de outros elementos */
+    height: 200vh; /* Garantir que o SVG ocupe toda a altura */
+    z-index: 50; /* Aumentando o z-index para garantir que o SVG esteja acima de todos os outros elementos */
     pointer-events: none; /* Permitir que cliques passem através do SVG */
-    border: 1px solid red; /* Adicionado temporariamente para ver o tamanho do SVG */
 }
 
 /* Estilo para as fases */
