--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -4,7 +4,7 @@
     top: 20px;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 20;
+    z-index: 30;
     text-align: center;
 }
 
@@ -34,6 +34,7 @@
     overflow-y: auto;
     transform-origin: center center;
     transition: transform 1s ease; /* Adicionado para suportar o zoom */
+    z-index: 1; /* Certificar que o fundo do mapa fique no fundo */
 }
 
 /* Contêiner SVG para as linhas pontilhadas */
@@ -43,7 +44,7 @@
     left: 0;
     width: 100%;
     height: 200vh; /* Garantir que o SVG ocupe toda a altura */
-    z-index: 50; /* Aumentando o z-index para garantir que o SVG esteja acima de todos os outros elementos */
+    z-index: 20; /* Elevando o z-index para garantir que o SVG fique acima do mapa */
     pointer-events: none; /* Permitir que cliques passem através do SVG */
 }
 
@@ -62,7 +63,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transition: transform 0.3s ease;
-    z-index: 2;
+    z-index: 30; /* Colocando as fases acima do mapa */
 }
 
 .phase-img {
