--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -23,7 +23,7 @@
     transition: top 0.6s ease, left 0.6s ease;
 }
 
-/* Contêiner do mapa com fundo ajustado */
+/* Contêiner do mapa com fundo ajustado e margin-top para não sobrepor o título */
 .map-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr); /* 5 colunas para o grid */
@@ -31,6 +31,7 @@
     gap: 50px; /* Espaçamento entre as fases */
     width: 100%;
     height: 200vh;
+    margin-top: 150px; /* Margem para deixar espaço para o título */
     position: relative;
     background-image: url('../../imagens/fundo.png');
     background-repeat: repeat;
