--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -1,11 +1,8 @@
 /* Estilo para o contêiner do título */
 .title-container {
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 20;
+    position: relative;
     text-align: center;
+    margin-bottom: 150px; /* Espaço abaixo do título para garantir que o grid não sobreponha */
 }
 
 /* Estilo da imagem de título */
@@ -23,7 +20,7 @@
     transition: top 0.6s ease, left 0.6s ease;
 }
 
-/* Contêiner do mapa com fundo ajustado e margin-top para não sobrepor o título */
+/* Contêiner do mapa com fundo ajustado */
 .map-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr); /* 5 colunas para o grid */
@@ -31,8 +28,6 @@
     gap: 50px; /* Espaçamento entre as fases */
     width: 100%;
     height: 200vh;
-    margin-top: 150px; /* Margem para deixar espaço para o título */
-    position: relative;
     background-image: url('../../imagens/fundo.png');
     background-repeat: repeat;
     background-size: 200%;
