--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -27,7 +27,7 @@ html, body {
 /* Contêiner do mapa com fundo ajustado */
 .map-container {
     display: grid;
-    grid-template-columns: repeat(5, 1fr); /* 5 colunas para o grid */
+    grid-template-columns: repeat(5, 1fr); /* 5 colunas no grid */
     grid-auto-rows: 200px; /* Altura das linhas do grid */
     gap: 50px; /* Espaçamento entre as fases */
     width: 100%;
@@ -39,6 +39,52 @@ html, body {
     transform-origin: center center;
     transition: transform 1s ease;
     padding-top: 100px; /* Espaço para garantir que o grid não sobreponha o título */
+}
+
+/* Estilo das fases organizadas em forma de "S" */
+.phase:nth-child(1) {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.phase:nth-child(2) {
+    grid-column: 3;
+    grid-row: 1;
+}
+
+.phase:nth-child(3) {
+    grid-column: 4;
+    grid-row: 1;
+}
+
+.phase:nth-child(4) {
+    grid-column: 4;
+    grid-row: 2;
+}
+
+.phase:nth-child(5) {
+    grid-column: 3;
+    grid-row: 2;
+}
+
+.phase:nth-child(6) {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.phase:nth-child(7) {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.phase:nth-child(8) {
+    grid-column: 3;
+    grid-row: 3;
+}
+
+.phase:nth-child(9) {
+    grid-column: 4;
+    grid-row: 3;
 }
 
 /* Estilo do bonequinho */
