--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -26,16 +26,17 @@
 /* Contêiner do mapa com fundo ajustado */
 .map-container {
     display: grid;
-    grid-template-columns: repeat(5, 1fr); /* 5 colunas para o grid */
+    grid-template-columns: repeat(3, 1fr); /* 3 colunas para o grid */
     grid-auto-rows: 200px; /* Altura das linhas do grid */
     gap: 50px; /* Espaçamento entre as fases */
-    width: 100%;
+    width: auto; /* Ajustar largura para centralizar o conteúdo */
     height: 200vh;
     position: relative;
     background-image: url('../../imagens/fundo.png');
     background-repeat: repeat;
     background-size: 200%;
     overflow-y: auto;
+    justify-content: center; /* Centraliza o grid horizontalmente */
     transform-origin: center center;
     transition: transform 1s ease;
 }
