--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -30,12 +30,12 @@
     grid-auto-rows: 200px; /* Altura das linhas do grid */
     gap: 50px; /* Espaçamento entre as fases */
     width: auto; /* Ajustar largura para centralizar o conteúdo */
-    height: 200vh;
+    height: auto; /* Ajuste automático da altura */
     position: relative;
     background-image: url('../../imagens/fundo.png');
     background-repeat: repeat;
     background-size: 200%;
-    overflow-y: auto;
+    overflow: hidden; /* Remove a barra de rolagem */
     justify-content: center; /* Centraliza o grid horizontalmente */
     transform-origin: center center;
     transition: transform 1s ease;
