--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -36,6 +36,7 @@
     background-repeat: repeat;
     background-size: 200%;
     overflow: hidden; /* Remove a barra de rolagem */
+    margin: 200px auto 0 auto; /* Centraliza o grid horizontalmente e adiciona 200px de margem superior */
     justify-content: center; /* Centraliza o grid horizontalmente */
     transform-origin: center center;
     transition: transform 1s ease;
