--- a/nivelA/unidade4/style.css
+++ b/nivelA/unidade4/style.css
@@ -38,9 +38,9 @@ body {
     grid-template-columns: repeat(3, 1fr); /* Mantém 3 colunas */
     grid-auto-rows: 200px; /* Altura das linhas do grid */
     gap: 50px; /* Espaçamento entre as fases */
-    width: auto; /* Ajustar largura para centralizar o conteúdo */
-    margin: 200px auto 0 auto; /* Centraliza o grid e adiciona 200px de margem superior */
-    padding: 0 50px; /* Adiciona espaço nas laterais */
+    max-width: 1200px; /* Limitar o tamanho do grid em telas grandes */
+    margin: 200px auto; /* Centraliza horizontalmente com margem superior */
+    padding: 0 20px; /* Ajusta o padding lateral para manter a centralização */
     position: relative;
     justify-content: center; /* Centraliza o grid horizontalmente */
 }
